samples/libssh/_sources/class_ssh_SshException.rst.txt
.. index:: pair: class; ssh::SshException
.. _doxid-classssh_1_1_ssh_exception:
.. _cid-ssh::sshexception:

class ssh::SshException
=======================

.. toctree::
	:hidden:

.. code-block:: cpp
	:class: overview-code-block

	#include <include/libssh/libsshpp.hpp>


Overview
~~~~~~~~

Some people do not like C++ exceptions. :ref:`More...<details-doxid-classssh_1_1_ssh_exception>`

.. _doxid-classssh_1_1_ssh_exception_1a19a0b361ddb0944efb9204e665bb7620:
.. _cid-ssh::sshexception::sshexception:
.. _doxid-classssh_1_1_ssh_exception_1aa5f0dab78e5fd64b308ee1aa02a4c696:
.. _cid-ssh::sshexception::sshexception-2:
.. ref-code-block:: cpp
	:class: overview-code-block

	// construction

	SshException (ssh_session csession)
	SshException (const :ref:`SshException<doxid-classssh_1_1_ssh_exception>`& e)

	// methods

	int
	:ref:`getCode<doxid-classssh_1_1_ssh_exception_1a3f736fef0b7dbf062d11f64aa41a61f4>` ()

	std::string
	:ref:`getError<doxid-classssh_1_1_ssh_exception_1a712f65602f9ae8bc6737ed4b1e4ee4cc>` ()

.. _details-doxid-classssh_1_1_ssh_exception:

Detailed Documentation
~~~~~~~~~~~~~~~~~~~~~~

Some people do not like C++ exceptions.

With this define, we give the choice to use or not exceptions. if defined, disable C++ exceptions for libssh c++ wrapperThis class describes a SSH Exception object. This object can be thrown by several SSH functions that interact with the network, and may fail because of socket, protocol or memory errors.

Methods
-------

.. _doxid-classssh_1_1_ssh_exception_1a3f736fef0b7dbf062d11f64aa41a61f4:
.. _cid-ssh::sshexception::getcode:
.. ref-code-block:: cpp
	:class: title-code-block

	int
	getCode ()

returns the Error code



.. rubric:: Returns:

SSH_FATAL Fatal error happened (not recoverable)

SSH_REQUEST_DENIED Request was denied by remote host



.. rubric:: See also:

:ref:`ssh_get_error_code <doxid-group__libssh__error_1ga036433b7bf3d4ca94206253f58d136f9>`

.. _doxid-classssh_1_1_ssh_exception_1a712f65602f9ae8bc6737ed4b1e4ee4cc:
.. _cid-ssh::sshexception::geterror:
.. ref-code-block:: cpp
	:class: title-code-block

	std::string
	getError ()

returns the error message of the last exception



.. rubric:: Returns:

pointer to a c string containing the description of error



.. rubric:: See also:

:ref:`ssh_get_error <doxid-group__libssh__error_1ga9241586665bf21f823806473fc386258>`

